--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CatPin",
+  "name": "CatNip",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -14,23 +14,23 @@
     "prettier:solidity": "npx prettier --write contracts/**/*.sol"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.1.0"
+    "@openzeppelin/contracts": "^3.2.0"
   },
   "devDependencies": {
     "@openzeppelin/test-helpers": "^0.5.6",
     "@openzeppelin/cli": "^2.8.2",
-    "@truffle/hdwallet-provider": "^1.0.43",
+    "@truffle/hdwallet-provider": "^1.1.0",
     "eth-gas-reporter": "^0.2.17",
-    "ganache-cli": "^6.10.1",
+    "ganache-cli": "^6.11.0",
     "mocha-junit-reporter": "^2.0.0",
-    "prettier": "^2.1.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.56",
-    "solc": "0.7.0",
-    "solhint": "^3.2.0",
+    "prettier": "^2.1.2",
+    "prettier-plugin-solidity": "^1.0.0-alpha.58",
+    "solc": "0.7.2",
+    "solhint": "^3.2.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "truffle": "5.1.42",
+    "truffle": "5.1.46",
     "truffle-assertions": "^0.9.2",
     "truffle-extract": "pooltogether/truffle-extract#2a57b6e63a8a2057aad0fec63ba255cd46e9ff1d",
-    "truffle-flattener": "^1.4.4"
+    "truffle-flattener": "^1.5.0"
   }
 }
